--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "^10.4.20",
     "bootstrap": "^5.3.3",
     "mongodb": "^6.8.1",
+    "mongoose": "^8.6.2",
     "next": "14.2.10",
     "react": "^18",
     "react-dom": "^18"
