--- a/package.json
+++ b/package.json
@@ -12,18 +12,23 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.0",
-    "autoprefixer": "^10.4.20",
-    "bootstrap": "^5.3.3",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "boostrap": "^2.0.0",
+    "bootstrap": "^5.3.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.1",
     "mongoose": "^8.6.2",
-    "next": "14.2.10",
+    "next": "^14.2.11",
     "react": "^18",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.2.10",
-    "postcss": "^8.4.45",
-    "tailwindcss": "^3.4.11"
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.2.0"
   }
 }
